--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -9,7 +9,7 @@ template(name='subreddit')
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
                 a.ui.basic.compact.circular.icon.button(href="/reddit")
-                    i.big.reddit.icon
+                    i.large.chevron.left.grey.icon
                     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
