20 tags, faster animation, remove_doc method,

--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -109,3 +109,8 @@ template(name='ruser_doc_item')
             .ui.basic.label #{data.subreddit}
             // .ui.large.label #{owner.display_name}
     .spacer
+    
+    
+    
+template(name='ruser_comments')
+    .ui.header hi
