--- a/client/r.jade
+++ b/client/r.jade
@@ -13,30 +13,36 @@ template(name='reddit')
                 .ui.icon.input
                     i.search.icon
                     input.search_subreddits(type='text')
+                +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
+                +skve k='sort_subs' v='name' l='name' i='title'
                 .scrolling
                     unless subreddit_docs.count
                         .ui.center.aligned.basic.segment
                             i.massive.yin.yang.grey.loading.icon
                     each subreddit_docs
-                        .ui.grid.rounded(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%; ")
-                            // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
-                            .four.wide.column.goto_sub.seg
-                                img.ui.rounded.zoomer.image(src=data.icon_img)
-                            .twelve.wide.column.say.seg
-                                a.ui.header.goto_sub(href="/r/#{data.display_name}")
-                                    img.ui.rounded.zoomer.image(src=data.header_img)
-                                    | !{data.title} 
-                                    // |!{data.display_name}
-                                a.ui.small.grey.header.goto_sub(href="/r/#{data.display_name}")
-                                    | !{data.header_title}
-                                // span.description !{data.public_description_html}
-                                span.descriptionl.goto_sub !{data.public_description}
-                                |created {{ufrom data.created}}
-                                span.say
-                                    // i.money.icon
-                                    |#{data.advertiser_category}
-                                each tags
-                                    .ui.basic.small.label.goto_sub #{this}
-                                if in_dev
-                                    +print_this
+                        +subreddit_doc
 
+
+template(name='subreddit_doc')
+    .ui.grid.rounded(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%; ")
+        // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
+        .four.wide.column.goto_sub.seg
+            img.ui.rounded.zoomer.image(src=data.icon_img)
+        .twelve.wide.column.say.seg
+            a.ui.header.goto_sub(href="/r/#{data.display_name}")
+                img.ui.rounded.zoomer.image(src=data.header_img)
+                | !{data.title} 
+                // |!{data.display_name}
+            a.ui.small.grey.header.goto_sub(href="/r/#{data.display_name}")
+                | !{data.header_title}
+            // span.description !{data.public_description_html}
+            span.descriptionl.goto_sub !{data.public_description}
+            |created {{ufrom data.created}}
+            span.say
+                // i.money.icon
+                |#{data.advertiser_category}
+            each tags
+                .ui.basic.small.label.goto_sub #{this}
+            if in_dev
+                +print_this
+                +remove_button
