--- a/client/stack.jade
+++ b/client/stack.jade
@@ -23,7 +23,7 @@ template(name='stack')
                     +skve k='sort_direction' v=1 i='chevron down'
             .four.wide.column
                 .ui.header stack docs
-            .twelve.wide.column.scrolling
+            .twelve.wide.column.scrollin
                 // .ui.four.column.stackable.center.aligned.grid
                 .ui.items
                     each site_docs
