--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -3,8 +3,7 @@ template(name='subreddit')
         .ui.basic.center.aligned.segment
             i.massive.yin.yang.loading.link.grey.icon.get_info.shadowed2
     with current_subreddit
-        .ui.stackable.grid(style="background-image:url(#{banner_background_image});, background-repeat: no-repeat; min-width: 100%; ")
-            // .row
+        .ui.stackable.grid(style="background-image:url(#{data.banner_img});, background-repeat: no-repeat; min-width: 100%; ")
             .eleven.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
