--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.small.five.item.borderless.grey.menu.topnav
+    .ui.fluid.attached.small.five.item.borderless.inverted.menu.topnav
         if connected
             // a.icon.zoomer.item.goto_vid(href='/vids' class="{{isActivePath regex='vids'}}" title='videos')
             //     i.large.video.grey.icon
