--- a/client/s.css
+++ b/client/s.css
@@ -8,7 +8,7 @@ body {
   /*background: rgba(0,0,0,.1) !important; */
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
-  /*background: rgba(200,200,200,1) !important;*/
+  background: rgba(200,200,200,1) !important;
   /*filter: invert(1) !important; */
   /*overscroll-behavior: none; */
   transition: all .25s ease !important;
