--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -2,48 +2,11 @@ template(name='reddit_page')
     with current_doc
         .ui.stackable.padded.grid
             .twelve.wide.column
-                a.ui.compact.circular.basic.button.say(href="/r/#{data.subreddit}")
+                a.ui.basic.button.say(href="/r/#{data.subreddit}")
                     i.chevron.left.icon
                     |#{data.subreddit}
                 span.ui.pointer.text.f13.zoomer(class=post_header_class) !{data.title} #{data.link_title}
                 // .ui.basic.circular.button.get_post permalink #{permalink}
-                if is_image
-                    img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
-                else if watson.metadata.image
-                    img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
-                if is_youtube
-                    div
-                    // .ui.fluid.embed
-                    //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
-                    iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                else if embed
-                    span.rounded.full
-                        |!{embed}
-                if data.link_url
-                    img.ui.image.pointer.call_visual(src=data.link_url)
-                div
-                span.say !{data.html}
-                
-
-                // if parsed_selftext_html
-                //     .ui.segment
-                //         |!{parsed_selftext_html}
-                if data.selftext
-                    // .ui.segment
-                    .pointer.say
-                        |{{#markdown}} {{data.selftext}} {{/markdown}}
-                else if data.body
-                    div
-                    .pointer.say
-                        |{{nl2br data.body}}
-                else if data.body_html
-                    div
-                    .pointer.say
-                        |!{data.body_html}
-                else if watson.analyzed_text
-                    .say.pointer
-                        |{{nl2br watson.analyzed_text}}
-                // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 +skve k='view_section' v='main' l='main' i='content'
                 +skve k='view_section' v='comments' l='comments' i='comment'
                 +skve k='view_section' v='watson' l='watson' i='dna'
@@ -52,7 +15,45 @@ template(name='reddit_page')
                 +skve k='view_section' v='tags' l='tags' i='tags'
                 +skve k='view_section' v='related' l='related' i='fork'
                 +skve k='view_section' v='preview' l='preview' i='content'
-                .scrollin
+                if skv_is 'view_section' 'main'
+                    if is_image
+                        img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
+                    else if watson.metadata.image
+                        img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
+                    if is_youtube
+                        div
+                        // .ui.fluid.embed
+                        //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+                        iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                    else if embed
+                        span.rounded.full
+                            |!{embed}
+                    if data.link_url
+                        img.ui.image.pointer.call_visual(src=data.link_url)
+                    div
+                    span.say !{data.html}
+                    
+    
+                    // if parsed_selftext_html
+                    //     .ui.segment
+                    //         |!{parsed_selftext_html}
+                    if data.selftext
+                        // .ui.segment
+                        .pointer.say
+                            |{{#markdown}} {{data.selftext}} {{/markdown}}
+                    else if data.body
+                        div
+                        .pointer.say
+                            |{{nl2br data.body}}
+                    else if data.body_html
+                        div
+                        .pointer.say
+                            |!{data.body_html}
+                    else if watson.analyzed_text
+                        .say.pointer
+                            |{{nl2br watson.analyzed_text}}
+                    // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                .scrolling
                     if skv_is 'view_section' 'main'
                         .spacer
                         // img(src=url)
@@ -83,6 +84,9 @@ template(name='reddit_page')
                             i.grey.comment.outline.icon
                             |#{rcomments.count} comments
                         // .ui.items
+                        each rcomment_tags
+                            .ui.button #{name} #{count}
+                        .spacer
                         each rcomments
                             +rcomment
             .four.wide.column
