--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -3,7 +3,7 @@ template(name='subreddit')
         .ui.basic.center.aligned.segment
             i.massive.yin.yang.loading.link.grey.icon.get_info.shadowed2
     with current_subreddit
-        .ui.stackable.grid(style="background-image:url(#{data.banner_img}); background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
+        .ui.stackable.grid(style="background-image:url(#{data.banner_img}); margin-top:0px;, background-size:cover;, background-repeat: no-repeat; min-width: 100%; ")
             .eleven.wide.column.seg
                 // img(src=data.banner_img)
                 // img(src=banner_background_image)
@@ -12,10 +12,6 @@ template(name='subreddit')
                     // img.ui.mini.inline.image(src=icon_img)
                 img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
-                // a.ui.basic.large.disabled.button(href="/s/#{display_name}/users")
-                //     i.large.user.outline.icon
-                //     |users
-                // div
                 if selected_tags
                     // if many_tags
                     //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
@@ -81,11 +77,14 @@ template(name='subreddit')
                             +subreddit_doc_item
                             .spacer
                             .spacer
-                            .spacer
+                            // .spacer
                     else
                         .ui.basic.center.aligned.segment
                             i.big.loading.yin.yang.icon
             .five.wide.column.scrolling.seg
+                a.ui.basic.large.disabled.button(href="/s/#{display_name}/users")
+                    i.large.user.outline.icon
+                    |users
                 +alpha
                 // .ui.inline.header.pull_latest #{display_name}
                 img.ui.inline.image(src=data.header_img)
@@ -101,15 +100,15 @@ template(name='subreddit')
                     //     .item {{ to_percent avg_sadness_score}}% sad
                     //     .item {{ to_percent avg_disgust_score}}% disgust
                     //     .item {{ to_percent avg_fear_score}}% fear
-                    if is_positive
-                        span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
-                            |&nbsp;
-                        div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
-                    else
-                        span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
-                            |&nbsp;
-                        div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
-                    span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% joy 
+                    // if is_positive
+                    //     span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% positive
+                    //         |&nbsp;
+                    //     div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                    // else
+                    //     span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  negative
+                    //         |&nbsp;
+                    //     div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                    span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment 
                         |&nbsp;
                     div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
                     span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
@@ -172,37 +171,40 @@ template(name='subreddit_doc_item')
     .ui.item.seg
         unless skv_is 'view_detail' true
             .ui.stackable.equal.width.grid
-                if embed
-                    span.rounded.full
-                        |!{embed}
-                else if is_image
+                .row
+                    if embed
+                        span.rounded.full
+                            |!{embed}
+                    else if is_image
+                        .column
+                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                                img.ui.fluid.rounded.image.zoomer.toggle_view(src=data.url)
+                    else if watson.metadata.image.length
+                        .column
+                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                                img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
+                    else if data.thumbnail.length
+                        .column
+                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                                img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
                     .column
-                        a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                            img.ui.fluid.rounded.image.zoomer.toggle_view(src=data.url)
-                else if watson.metadata.image.length
+                        a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                            strong #{data.ups}:
+                            |!{data.title} 
+                            // span.inline.content
+                        if watson.analyzed_text
+                            .spacer
+                            a.f11.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                                |{{trunc watson.analyzed_text}}...
+                        .ui.basic.label 
+                            i.clock.icon
+                            |{{ufrom data.created}}
+                .row    
                     .column
-                        a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                            img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
-                else if data.thumbnail.length
-                    .column
-                        a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                            img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
-                .column
-                    a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                        strong #{data.ups}:
-                        |!{data.title} 
-                        // span.inline.content
-                    if watson.analyzed_text
-                        .spacer
-                        a.f11.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                            |{{trunc watson.analyzed_text}}...
-                    .ui.basic.label 
-                        i.clock.icon
-                        |{{ufrom data.created}}
-                    each tags
-                        +flat_sub_tag_selector
-                    // if watson
-                    //     +doc_emotion_small
+                        each tags
+                            +flat_sub_tag_selector
+                        // if watson
+                        //     +doc_emotion_small
 
         if skv_is 'view_detail' true
             a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
