working user data pull with custom user agent and update user profile info

--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -85,7 +85,8 @@ template(name='reddit_page')
                             |#{rcomments.count} comments
                         // .ui.items
                         each rcomment_tags
-                            .ui.button #{name} #{count}
+                            .ui.compact.button #{name}
+                                small #{count}
                         .spacer
                         each rcomments
                             +rcomment
