remove ea files, faster animations, remove circular class, v2 user info in profile with non static username in method, profile overview

--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -7,65 +7,48 @@ template(name='ruser')
         .ui.hidden.divider
         .ui.center.aligned.basic.segment.search
             i.massive.grey.download.link.icon.get_user_info
-        // .ui.massive.fluid.circular.button.f17.zoomer.pointer.search 
+        // .ui.massive.fluid.button.f17.zoomer.pointer.search 
         //     i.download.icon
             // |download user info
     with ruser_doc
         .ui.stackable.padded.grid
             .row
                 .four.wide.column
+                    img.ui.image(src=data.snoovatar_img)
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
                         small(title='reputation') {{ commafy karma }}
                         strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
-                    i.circular.info.icon.get_user_info
+                    with data
+                        .ui.list
+                            .item #{total_karma} total karma
+                            .item #{comment_karma} comment karma
+                            .item #{link_karma} link karma
+                            .item #{awardee_karma} awardee karma
+                            .item #{awarder_karma} awarder karma
+                            .item created {{ufrom created_utc}}
+                        if is_gold
+                            i.large.yellow.star.icon(title='is gold')
+                        if is_mod
+                            i.large.blue.shield.icon(title='is mod')
+                        if has_verified_email
+                            i.large.mail.icon(title='verified email')
+                    i.info.icon.get_user_info
                     img.ui.rounded.inline.image.pointer.zoomer(src=profile_image)
-                    a.ui.large.compact.circular.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
+                    a.ui.large.compact.basic.button(href="http://www.reddit.com/user/#{username}" target='_window' title="#{site} profile")
                         i.reddit.icon
                         i.external.icon
                     +print_this
-                    with data
-                        .ui.list
-                            .item uid #{account_id}
-                            .item modified {{ufrom last_modified_date}}
-                            .item accessed  {{ufrom last_access_date}}
-                            .item created {{ufrom creation_date}}
-                            .item #{user_type}
-                            .item awardee_karma #{awardee_karma}
-                            .item awarder_karma #{awarder_karma}
-                            .item comment_karma #{comment_karma}
-                            .item created #{created}
-                            .item created_utc #{created_utc}
-                            .item has_subscribed #{has_subscribed}
-                            .item has_verified_email #{has_verified_email}
-                            .item hide_from_robots #{hide_from_robots}
-                            .item icon_img #{icon_img}
-                            .item id #{id}
-                            .item is_employee #{is_employee}
-                            .item is_friend #{is_friend}
-                            .item is_gold #{is_gold}
-                            .item is_mod #{is_mod}
-                            .item link_karma #{link_karma}
-                            .item name #{name}
-                            .item pref_show_snoovatar #{pref_show_snoovatar}
-                            .item snoovatar_img #{snoovatar_img}
-                            .item snoovatar_size #{snoovatar_size}
-                            .item subreddit #{subreddit}
-                            .item total_karma #{total_karma}
-                            .item verified #{verified}
-                    a.ui.external.icon.button(href=link target='_window') 
-                        i.linkify.icon
-                        // |#{link}
                 .twelve.wide.column
                     a.ui.button(href="/user/#{username}")
                         i.dashboard.icon
                         |overview
+                    a.ui.button(href="/user/#{username}/posts")
+                        i.edit.icon
+                        |posts
                     a.ui.button(href="/user/#{username}/comments")
-                        i.reply.icon
-                        |submitted
-                    a.ui.button(href="/user/#{username}/comments")
-                        i.chat.icon
+                        i.chat.outline.icon
                         |comments
                     a.ui.button(href="/user/#{username}/upvoted")
                         i.thumbs.up.outline.icon
@@ -85,16 +68,53 @@ template(name='ruser')
                             i.post.icon
                             |#{user_posts.count} posts
                     if skv_is 'view_detail' true
-                        .ui.black.circular.compact.icon.button.toggle_detail
+                        .ui.black.compact.icon.button.toggle_detail
                             i.list.large.icon
                             // |detail
                     else
-                        .ui.compact.circular.basic.icon.button.toggle_detail
+                        .ui.compact.basic.icon.button.toggle_detail
                             i.minus.large.icon
                             // |simple
-        
                     div
                     +yield
+         
+         
+template(name='ruser_overview')
+    .ui.stackable.grid
+        .eight.wide.column
+            .ui.header 
+                i.edit.icon
+                |posts
+            .smallscroll
+                each ruser_posts
+                    .ui.segment
+                        a.ui.small.inline.header(href="/r/#{subreddit}/post/#{_id}") #{data.title}
+                        a.ui.label(href="/r/#{subreddit}") #{subreddit}
+                        // each tags 
+                        //     .ui.small.label #{this}
+        .eight.wide.column
+            .ui.header 
+                i.chat.icon
+                |comments
+            .smallscroll
+                each top_comments
+                    .ui.header #{title}
+        .eight.wide.column
+            .ui.header upvoted
+            each top_upvoted
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.header downvoted
+            each top_downvoted
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.header hidden
+            each top_hidden
+                .ui.header #{title}
+        .eight.wide.column
+            .ui.header saved
+            each top_saved
+                .ui.header #{title}
                     
 template(name='ruser_posts')
     .scrolling
@@ -106,20 +126,20 @@ template(name='ruser_doc_item')
     .ui.item
         if is_image
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.centered.rounded.zoomer.inline.medium.image.toggle_view(src=data.url)
+                img.ui.centered.rounded.zoomer.inline.small.image.toggle_view(src=data.url)
         else if watson.metadata.image
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.rounded.inline.medium.image.zoomer.toggle_view(src=watson.metadata.image)
+                img.ui.rounded.inline.small.image.zoomer.toggle_view(src=watson.metadata.image)
         else if data.thumbnail
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.rounded.inline.medium.image.zoomer(src=data.thumbnail)    
+                img.ui.rounded.inline.small.image.zoomer(src=data.thumbnail)    
         a.ui.header.zoomer.say_title(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
             strong #{data.score}:
             |!{data.link_title} #{data.title}
         .description
             if skv_is 'view_detail' true
                 each tags 
-                    .ui.tiny.basic.circular.tertiary.button #{this}
+                    .ui.tiny.basic.tertiary.button #{this}
             +doc_emotion_small    
             span(title="#{view_count} views")
                 i.grey.eye.icon
