--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -103,7 +103,7 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.basic.compact.button.set_session_v.say(class=calculated_class title=t)
+    .ui.zoomer.basic.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
