--- a/client/rpage.jade
+++ b/client/rpage.jade
@@ -7,6 +7,7 @@ template(name='reddit_page')
                     |#{data.subreddit}
                 span.ui.pointer.text.f13.zoomer(class=post_header_class) !{data.title} #{data.link_title}
                 // .ui.basic.circular.button.get_post permalink #{permalink}
+                div
                 +skve k='view_section' v='main' l='main' i='content'
                 +skve k='view_section' v='comments' l='comments' i='comment'
                 +skve k='view_section' v='watson' l='watson' i='dna'
@@ -15,44 +16,44 @@ template(name='reddit_page')
                 +skve k='view_section' v='tags' l='tags' i='tags'
                 +skve k='view_section' v='related' l='related' i='fork'
                 +skve k='view_section' v='preview' l='preview' i='content'
-                if skv_is 'view_section' 'main'
-                    if is_image
-                        img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
-                    else if watson.metadata.image
-                        img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
-                    if is_youtube
-                        div
-                        // .ui.fluid.embed
-                        //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
-                        iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    else if embed
-                        span.rounded.full
-                            |!{embed}
-                    if data.link_url
-                        img.ui.image.pointer.call_visual(src=data.link_url)
+                // if skv_is 'view_section' 'main'
+                if is_image
+                    img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
+                else if watson.metadata.image
+                    img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
+                if is_youtube
                     div
-                    span.say !{data.html}
-                    
-    
-                    // if parsed_selftext_html
-                    //     .ui.segment
-                    //         |!{parsed_selftext_html}
-                    if data.selftext
-                        // .ui.segment
-                        .pointer.say
-                            |{{#markdown}} {{data.selftext}} {{/markdown}}
-                    else if data.body
-                        div
-                        .pointer.say
-                            |{{nl2br data.body}}
-                    else if data.body_html
-                        div
-                        .pointer.say
-                            |!{data.body_html}
-                    else if watson.analyzed_text
-                        .say.pointer
-                            |{{nl2br watson.analyzed_text}}
-                    // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                    // .ui.fluid.embed
+                    //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+                    iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                else if embed
+                    span.f11.full
+                        |!{embed}
+                if data.link_url
+                    img.ui.image.pointer.call_visual(src=data.link_url)
+                div
+                span.f12.say !{data.html}
+                
+
+                // if parsed_selftext_html
+                //     .ui.segment
+                //         |!{parsed_selftext_html}
+                if data.selftext
+                    // .ui.segment
+                    .f12.say
+                        |{{#markdown}} {{data.selftext}} {{/markdown}}
+                else if data.body
+                    div
+                    .f12.say
+                        |{{nl2br data.body}}
+                else if data.body_html
+                    div
+                    .f12.say
+                        |!{data.body_html}
+                else if watson.analyzed_text
+                    .say.f12
+                        |{{nl2br watson.analyzed_text}}
+                // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 .scrolling
                     if skv_is 'view_section' 'main'
                         .spacer
