--- a/client/s.css
+++ b/client/s.css
@@ -1,6 +1,6 @@
 body {
   /* font-family: 'Raleway', sans-serif !important; */
-  font-family: 'Ubuntu', sans-serif !important; 
+  /*font-family: 'Ubuntu', sans-serif !important; */
   /* font-family: 'Lato+Mono', sans-serif !important; */
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
@@ -8,10 +8,10 @@ body {
   /*background: rgba(0,0,0,.1) !important; */
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
-  background: rgba(200,200,200,1) !important;
+  background: rgba(225,225,225,1) !important;
   /*filter: invert(1) !important; */
   /*overscroll-behavior: none; */
-  transition: all .25s ease !important;
+  /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
 }
 
@@ -77,7 +77,7 @@ html {
 
 
 .tone_item {
-    transition: all .25s ease !important;
+    transition: all .15s ease !important;
 }
 
 .displaynone {
@@ -198,7 +198,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  /*transition: height .25s linear;*/
+  /*transition: height .15s linear;*/
   border-radius: 10px !important;
 }
 
@@ -309,7 +309,7 @@ input
 
 
 .tone_item {
-    /*transition: all .25s ease !important;*/
+    /*transition: all .15s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -346,7 +346,7 @@ a.goto_article {
 .ui.button {
   margin: 2px !important;
   /*border-radius: 10px !important; */
-  transition: height .25s ease !important; 
+  /*transition: height .1s ease !important; */
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
@@ -358,12 +358,12 @@ a.goto_article {
 .say {
     /*animation: fadein .35s !important;*/
     /*animation: fadeout .35s; */
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
 }
 .say:hover {
     /*animation: fadein .35s !important;*/
     /*animation: fadeout .35s; */
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
     /*cursor: crosshair !important;*/
     color: black !important; 
     transform: scale(1.01) !important;
@@ -378,7 +378,7 @@ a.goto_article {
 }
 
 .pointer:hover {
-    transition: all .25s linear !important; 
+    transition: all .15s linear !important; 
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
@@ -393,11 +393,11 @@ a.goto_article {
 
 .zoomer {
     /*animation: fadeout .35s; */
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
 
 }
 .zoomer:hover {
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
     /*text-shadow: 0 0 3px grey !important;*/
     /*filter: drop-shadow(0px 0px 3px white);    */
     z-index: 1000 !important;
@@ -413,18 +413,18 @@ a.goto_article {
 /*}*/
 .superzoom {
     /*animation: fadeout .35s; */
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
 
 }
 .superzoom:hover {
-    transition: all .25s ease !important; 
+    transition: all .15s ease !important; 
     transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     /*border-radius: 7px !important;*/
     /*animation: fadein .35s !important;*/
-    /*-webkit-transition: opacity .25s ease-in !important;*/
-    /* -webkit-transition: opacity .25s ease-out; */
+    /*-webkit-transition: opacity .15s ease-in !important;*/
+    /* -webkit-transition: opacity .15s ease-out; */
     /*animation: fadeout .35s; */
     
 }
@@ -514,12 +514,12 @@ a.title, #title {
 }
 .f12 {
   font-size: 120% !important;
-  line-height: 120% !important;
+  line-height: 150% !important;
   /* margin-bottom: 10px !important;  */
 }
 .f11 {
   font-size: 110% !important;
-  line-height: 120% !important;
+  line-height: 140% !important;
   /* margin-bottom: 10px !important;  */
 }
 .f10 {
@@ -668,7 +668,7 @@ input {
 }
 .button:active{
   border-radius: 7px !important;  
-  /* transition: all .25s !important; */
+  /* transition: all .15s !important; */
   /*transform: translate(0, 1px) !important; */
   /*zoom:105% !important;*/
   /*-webkit-transform: translate(0, 1px) !important;*/
@@ -676,7 +676,7 @@ input {
 
 
 .button,.card,.image,.item,.header,.label,p,img,.say,.pointer{
-    animation: fadein .25s !important;
+    animation: fadein .15s !important;
     /*-webkit-transition: opacity ..35s ease-in !important;*/
     /* -webkit-transition: opacity ..35s ease-out; */
     /*animation: fadeout ..35s; */
@@ -686,7 +686,7 @@ input {
 .icon:not(.loading){
     animation: fadein .35s !important;
     transition: all .35s ease !important;
-    /* -webkit-transition: opacity .25s ease-out; */
+    /* -webkit-transition: opacity .15s ease-out; */
     animation: fadeout .35s; 
 }
 
@@ -706,7 +706,7 @@ input {
 }
 
 .ui.header{
-  transition: all .25s ease !important;
+  transition: all .15s ease !important;
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
