--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -183,10 +183,10 @@ template(name='subreddit_doc_item')
                         .column
                             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                                 img.ui.rounded.inline.image.zoomer.toggle_view(src=watson.metadata.image)
-                    else if data.thumbnail.length
-                        .column
-                            a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
-                                img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
+                    // else if data.thumbnail.length
+                    //     .column
+                    //         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                    //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
                     .column
                         a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                             strong #{data.ups}:
