--- a/client/s.css
+++ b/client/s.css
@@ -18,8 +18,8 @@ body {
 .seg {
   background: rgba(250,250,250,.85);
   /*opacity: .5;*/
-  border-radius: 10px;
-  padding:5px;
+  border-radius: 5px;
+  padding:15px;
 }
 .pulsing {
     /*height: 250px; */
@@ -328,7 +328,8 @@ input
 
 
 .rounded {
-  border-radius: 10px !important; 
+  border-radius: 7px !important; 
+  /*padding: 10px !important; */
 }
 
 .card {
@@ -341,7 +342,7 @@ a.goto_article {
 }
 
 .ui.button:not(.circular) { 
-    border-radius: 10px !important;
+    /*border-radius: 10px !important;*/
 }
 .ui.button {
   margin: 2px !important;
@@ -584,7 +585,7 @@ a.title, #title {
 
 input {
     /*margin: 5px !important;*/
-    border-radius: 7px !important; 
+    /*b/order-radius: 7px !important; */
 }
 
 ::-webkit-scrollbar {
